--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-firebase/app": "^14.9.3",
+    "@react-native-firebase/crashlytics": "^14.9.3",
     "react": "17.0.2",
     "react-native": "0.68.2"
   },
