--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "@react-native-firebase/app": "^14.9.3",
     "@react-native-firebase/crashlytics": "^14.9.3",
     "react": "17.0.2",
-    "react-native": "0.68.2"
+    "react-native": "0.68.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.10",
-    "@babel/runtime": "^7.17.9",
+    "@babel/core": "^7.17.8",
+    "@babel/runtime": "^7.17.8",
     "@react-native-community/eslint-config": "^3.0.1",
-    "babel-jest": "^28.1.0",
-    "eslint": "^8.15.0",
-    "jest": "^28.1.0",
-    "metro-react-native-babel-preset": "^0.70.3",
+    "babel-jest": "^27.5.1",
+    "eslint": "^8.12.0",
+    "jest": "^27.5.1",
+    "metro-react-native-babel-preset": "^0.70.0",
+    "react-native-version": "^4.0.0",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
